static/new_home/style.css
/*------GLOBAL-----*/
html
{
  scroll-behavior: smooth;  
}

body
{
  font: 15px/1.5 "OpenSans" ,Helvetica ,sans-serif;
  color: #4e4039; 
  margin : 0; 
  padding: 0; 
}

/*------ NAV BAR STARTS ------*/
nav
{
  position: sticky;
  top: 0;
  z-index: 10;
  height: 63px;
  width: 100%;
  font-size: 18px;
  background-color: rgb(252,252,252);
}

/*------ Shadow while Navbar scrolls down ------*/
.floatingNav
{
  box-shadow: 8px 2px 15px rgba(0, 0, 0, 0.2);
}


/*------ Right Nav Bar ------*/
.navbar1
{
  position: absolute;
  right: 0px;
  font-size: 18px;
}
.navbar1 ul
{
  list-style: none;
  padding: 0;
  margin: 0;
}
.navbar1 ul a
{
  color: #4e4039;
  font-family: "Open Sans", sans-serif;
  display: inline-block;
  padding: 20px 18px;
  transition: 0.4s;
}
.navbar1 ul a:hover
{
  color: #f17e01 !important;
  transition: 0.4s;
  text-decoration: none;
}
.navbar1 button
{
  height: 51px;
  padding: 12.9px 15px;
  background-color: transparent;
  font-size: 18px;
  border: none;
}
.navbar1 button:hover
{
  color: orange;
  transition: 0.4s;
}
.btn-get-started 
{
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 28px;
  border-radius: 3px;
  transition: 0.5s;
  margin: 10px;
  color: #fff;
  background: #eb5d1e;
}

.btn-get-started:hover 
{
  background: #ef7f4d;
}

.navlink
{
  position: absolute !important;
  background-color: rgba(0,0,0,.45)!important;
  animation: translate 1s;
}
.navlink a
{
  color: white !important;
}

.nav-link a:hover
{
  transition: 0.6s;
}

/*------ Left Nav Bar ------*/
.navbar 
{
  float: left;
  overflow: hidden;
  display: inline-block !important;
}

.navbar a 
{
  margin-left: -5px;
  display: inline-block;
  padding: 12px 18px;
  transition: 0.4s;
  color: #4e4039;
  font-family: "Open Sans", sans-serif;
}

.navbar a:hover 
{
  color: #f17e01;
  transition: 0.4s;
  text-decoration: none;
}

.navbar .icon 
{
  padding:  0px;
  display: none;
}

.child-2:hover ~ hr {
  width: 17%;
  margin-left: 18%;
}

.child-3:hover ~ hr {
  width: 24%;
  margin-left: 36%;
}
.child-4:hover ~ hr {
  width: 17%;
  margin-left: 61%;
}

.child-5:hover ~ hr {
  width: 20%;
  margin-left: 80%;
}

hr {
  height: .25rem !important; 
  width: 16%;
  margin-top: 1px !important;
  margin: 0px 0px 2px 0px;
  background: #f17e01;
  border: none !important;
  transition: .3s ease-in-out;
}

/*------ Hamburger Menu ------*/
.bar 
{
  float: left;
  display: inline-block;
  cursor: pointer;
  padding:  10px 20px;
}

.bar:hover
{
  transition: 0.4s;
}

.bar1, .bar2, .bar3 
{
  width: 25px;
  height: 3px;
  background-color: black;
  margin: 5px 0;
  transition: 0.4s;
}

.change .bar1 
{
  -webkit-transform: rotate(-45deg) translate(-4px, 3px);
  transform: rotate(-45deg) translate(-4px, 3px);
}

.change .bar2 
{
  opacity: 0;
}

.change .bar3 
{
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-8px, -8px);
}

/*----- Animation for navbar ------*/
@keyframes translate
{
  0% 
  {
    opacity: 0;
    transform: translateY(-60px);
  }
  
  80% 
  {
    transform: translateY(10px);
  }

  100% 
  {
    opacity: 1;
    transform: translateY(0px);
  }
}

/*------ Responsive Navbar ------*/
@media(max-width: 760px)
{
  .navbar a
  {
    display: none;
  }
  .navbar a.icon 
  {
    float: left;
    display: block;
    margin-left: 20px;
    height: 50.5px;
  }
  .navbar.responsive
  {
    position: absolute;
    width:100%;
    background-color: rgba(0,0,0,.45)!important;
    transition: 0.5s;
  }
  .navbar.responsive .icon 
  {
    position: relative;
    left: 0;
    top: 0;
    width: 65px;
    padding: 0px;
    animation: none;
  }
  .navbar.responsive a 
  {
    color: white;
    float: none;
    display: block;
    text-align: left;
    padding: 10px 7vw 10px 30px;
    padding-right: screen.width*8;
  }
  .navbar a:hover 
  {
    color: #f17e01;
    background-color: white;
    transition: 0.6s; 
  }
  
  .bar
  {
  display: block;
  }
  
  hr
  {
    display: none;
  }

  .child-1
  {animation: translate 1s; margin-left: 0px; padding-right: 90%;}
  .child-2
  {animation: translate 1.2s}
  .child-3
  {animation: translate 1.4s}
  .child-4
  {animation: translate 1.6s}
  .child-5
  {animation: translate 1.8s}
}

@media(max-width: 450px)
{
  .navbar1 .btn-get-started
  {
    display: none;
  }  
}
/*----- Navbar Ends -----*/

/*------Header Starts-------*/
header
{
  background: #666; 
  min-height: 60px; 
}

#header {
  width: 100%;
  height: 70vh;
  border-bottom: 2px solid #fcebe3;
  margin: 72px 0 -72px 0;
}

#header h1 {
  margin: 0 0 10px 0;
  font-size: 48px;
  font-weight: 700;
  line-height: 56px;
  color: #4e4039;
}

#header h2 {
  color: #a08f86;
  margin-bottom: 50px;
  font-size: 24px;
}

.btn-get-started {
  font-family: "Raleway", sans-serif;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 28px;
  border-radius: 3px;
  transition: 0.5s;
  margin: 10px;
  color: #fff;
  background: #eb5d1e;
}

.btn-get-started:hover {
  background: #ef7f4d;
  color: white;
  text-decoration:none;
}

.magica
{
  background-image: linear-gradient(120deg, #84ffb0 0%, #8fd3f4 100%);
  background-repeat: no-repeat;
  background-size: 100% 0.2em;
  background-position: 0 88%;
  transition: background-size 0.25s ease-in;
}
.magica:hover 
{
    background-size: 100% 88%;
}

#header .animated {
  animation: up-down 2s ease-in-out infinite alternate-reverse both;
}

@media (min-width: 1024px) {
  #header {
    background-attachment: fixed;
  }
}

@media (max-width: 991px) {
  #header {
    height: calc(100vh - 72px);
  }
  #header .animated {
    -webkit-animation: none;
    animation: none;
  }
  #header .header-img {
    text-align: center;
  }
  #header .header-img img {
    width: 50%;
  }
}

@media (max-width: 768px) {
  #header h1 {
    font-size: 28px;
    line-height: 36px;
  }
  #header h2 {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 30px;
  }
  #header .header-img img {
    width: 70%;
  }
}

@media (max-width: 575px) {
  #header .header-img img {
    width: 80%;
  }
}

@-webkit-keyframes up-down {
  0% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(-10px);
  }
}

@keyframes up-down {
  0% {
    transform: translateY(10px);
  }
  100% {
    transform: translateY(-10px);
  }
}

/*------ About Us Starts ------*/
.cntainer{
  max-width:80%;
  margin:auto;
  overflow: hidden;
}

#about-us{
  text-align: center;
  background-color: #fef8f5;
  color: #616370;
  color: #818390;
  font-size: 100%;
}
#about-us::before{
  display: block;
  content: "";
  margin-top: -25px;
  height: 25px;
  visibility: hidden;
}
#about-us h1, #about-us h2{
  color: #4e4039;
}
#about-us h1::after{
  content: "";
  display: block;
  width: 13%;
  margin: auto;
  margin-top: 2px;
  height: 2px;
}
#about-us img{
  width: 350px;
}
#about-us .container div{
  max-height: 500px;
}

.vision{
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  grid-template-areas: "left right";
  grid-column-gap: 2em;
  padding: 20px 0;
  margin-bottom: 1em;
}

.mission{
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto;
  grid-template-areas: "right left";
  grid-column-gap: 1em;
  padding: 10px 0 25px;
}

.vision-left, .mission-left {
  grid-area: left;
  width: 100%;
}

.vision-right, .mission-right {
  grid-area: right;
}

@media screen and (max-width: 760px) {
  .vision {
    grid-template-columns: 1fr;
    grid-template-rows: auto;

    grid-template-areas:
    "left"
    "right";
  }
  .mission {
    grid-template-columns: 1fr;
    grid-template-rows: auto;

    grid-template-areas:
    "left"
    "right";
  }

  .vision-left,
  .mission-left {
    margin-bottom: 2em;
  }
}

@media screen and (max-width:600px) {
  #about-us img {
    max-width: 250px;
  }
}

/*------ Events Starts ------*/

.card-container{
    display: grid;
    overflow: hidden;
    grid-template-columns: repeat(auto-fit,400px);
    grid-gap: 2em;
    justify-content: space-evenly;
    padding: 4em 2em;
}

.card-container .card{
    width: 100%;
    display: grid;
    grid-template-rows: 300px minmax(80px,auto);
    grid-template-areas: 
    "img"
    "word";
    overflow: hidden;
    border-radius: 20px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: all 0.3s;
    cursor: default;
}

.card-img img{
    grid-area: img;
    width: 100%;
}

.card-img{
    overflow: hidden;
}

.card-text {
    grid-area: word;
    padding-top: 30px;
    text-align: center;
}

.card-text h2{
    text-align: center;
    padding: 20px 0;
}

.card-text p{
    padding: 0 10px;
}
.card:hover{
    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
}
@media(max-width: 890px)
{
  .card-container{
    grid-template-columns: repeat(auto-fit, 525px);
  }
}

/*----- Events Ends -------*/


/*----- Donate Us STARTS*/
#donate-us{
  text-align: center;
  background-color: #fef8f5;
  color: #616370;
  color: #818390;
  font-size: 100%;
}
#donate-us::before{
  display: block;
  content: "";
  margin-top: -25px;
  height: 25px;
  visibility: hidden;
}
#donate-us h1, #donate-us h2{
  color: #4e4039;
}
#donate-us h1::after{
  content: "";
  display: block;
  width: 13%;
  margin: auto;
  margin-top: 2px;
  height: 2px;
}

/*----- Donate Us Ends -----*/

/* Contact Us Starts */

.containerly{
  width: 70%;
}

#error-display{
  color: red;
  font-size: 20px;
  margin-bottom: 4px;
  text-align: center;
}

.btn-cstm{
  background-color: #eb5d1e;
  color: white;
  border-radius: 25px;
}

.form-control:focus {
  border-color: #f04400;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5);
}

.cstm-input{
  border-color: #ffa480;
  border-radius: none;
}

.card-rounder{
  border-radius: 10px !important;
}

.infoshow{
  font-size: large;
  font-weight: bold;
  margin-left: 2px;
}

.icon-color{
  color: #eb5d1e;
}

.text-cstm{
  color: #eb5d1e;
}

/* Contact Us Ends */

footer{
  background-color: #fef8f5;
  color: #4e4039;
  text-align: center;
  padding: 5px 0;
}

